<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_icon"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quoteText"
        android:layout_width="320dp"
        android:layout_height="427dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/quoteText"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="315dp"
        android:layout_height="165dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/authorText"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/quoteText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/quoteText"
        app:layout_constraintTop_toBottomOf="@+id/quoteText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/newQuoteButton"
        android:layout_width="91dp"
        android:layout_height="66dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/newQuoteButton"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#000000"
        app:icon="@drawable/ic_baseline_arrow_back"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>