<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_icon"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/notifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/button"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <TextView
        android:id="@+id/editTextTime"

        android:layout_width="340dp"
        android:layout_height="47dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeTextType="uniform"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/select_an_hour_for_a_reminder"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <Button
        android:id="@+id/selectTimeButton"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginTop="9dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeTextType="uniform"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/select_time"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/notifyButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="#000000"
        app:icon="@drawable/ic_baseline_arrow_back"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/lightSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:enabled="false"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        android:text="FLASH OFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>